--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
   <div id="root"></div>
+  <div id="map" style="width:500px; height:300px"></div>
+  <script
+    type="text/javascript"
+    charset="utf-8"
+    src="https://map.yahooapis.jp/js/V1/jsapi?appid=dj00aiZpPUdiSFBacVYwam1adSZzPWNvbnN1bWVyc2VjcmV0Jng9Y2E-"
+  >
+  </script>
 </body>
 </html>
