--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Page Title</title>
+  <title>とちすぽっと！（β版）</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
